Working on css.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Web Developer Bootcamp</title>
+
 </head>
 <body>
-	
+	<h1>What I have learned from the video?</h1>
+	<ol>
+		<li><a href="assignment1.html" title="Assignment 1">Lists</a></li>
+		<li><a href="assignment2.html" title="Assignment 2">Attributes</a></li>
+		<li><a href="assignment3.html" title="Assignment 3">Tables&Forms</a></li>
+		<li><a href="assignment4.html" title="Assignment 4">CSS</a></li>
+	</ol>
 </body>
 </html>
