--- a/exe.html
+++ b/exe.html
@@ -2,27 +2,12 @@
 <html>
 <head>
 	<title>CSS</title>
-	<!-- <link rel="stylesheet" type="text/css" href="resources/css/app.css"> -->
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="resources/css/app.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Titillium+Web:400,700" rel="stylesheet">
 </head>
 <body>
-<!-- <h1>About Me</h1>
-<h4>My Hobbies:</h4>
-<ul>
-	<li>Palying Guitar</li>
-	<li>Cooking</li>
-	<li>Coding</li>
-</ul>
-<h1>Todo List</h1>
-<ul>
-	<li><input type="checkbox" name="">Walk Rusty</li>
-	<li><input type="checkbox" name="">Buy Groceries</li>
-	<li><input type="checkbox" name="">Finish Recording CSS</li>
-</ul>
-<h1>Popular Sites</h1>
-<ul>
-	<li><a href="http://www.google.ca" title="Google">Google</a></li>
-	<li><a href="http://www.facebook.com" title="Facebook">Facebook</a></li>
-	<li><a href="http://www.reddit.com" title="Reddit">Reddit</a></li>
-</ul> -->
+
+
 </body>
 </html>
