--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,13 +2,50 @@
 <html>
 <head>
 	<title>Bootstrap basics</title>
-	<link rel="stylesheet" type="text/css" href="resources/vendors/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="resources/css/app.css">
 </head>
 <body>	
-	<main class="login c1" id="yui_patched_v3_11_0_1_1521845868113_174"> <div class="row login-container" id="yui_patched_v3_11_0_1_1521845868113_173"> <form action="http://localhost:8080/web/elvis/sign-in?p_p_id=58&amp;p_p_lifecycle=1&amp;p_p_state=normal&amp;p_p_mode=view&amp;p_p_col_id=column-1&amp;p_p_col_count=2&amp;_58_struts_action=%2Flogin%2Flogin" class="form sign-in-form " id="_58_fm" method="post" name="_58_fm" autocomplete="on"> <fieldset class="input-container" id="yui_patched_v3_11_0_1_1521845868113_172"> <input name="_58_formDate" type="hidden" value="1521845866947"> <input class="field" id="_58_saveLastPath" name="_58_saveLastPath" type="hidden" value="false"> <input class="field" id="_58_redirect" name="_58_redirect" type="hidden" value=""> <input class="field" id="_58_doActionAfterLogin" name="_58_doActionAfterLogin" type="hidden" value="false"> <fieldset class="fieldset " id="yui_patched_v3_11_0_1_1521845868113_171"> <div class="" id="yui_patched_v3_11_0_1_1521845868113_170"> <div class="control-group input-text-wrapper success" id="yui_patched_v3_11_0_1_1521845868113_169"> <label class="control-label" for="_58_login"> Screen Name </label> <input class="field clearable success-field" id="_58_login" name="_58_login" type="text" value="" aria-required="true"> </div> <div class="control-group input-text-wrapper success" id="yui_patched_v3_11_0_1_1521845868113_188"> <label class="control-label" for="_58_password"> Password </label> <input class="field success-field" id="_58_password" name="_58_password" type="password" value="" aria-required="true"> </div> <span id="_58_passwordCapsLockSpan" style="display: none;">Caps Lock is on.</span> <div class="control-group form-inline input-checkbox-wrapper"> <label class="checkbox" for="_58_rememberMeCheckbox"> <input id="_58_rememberMe" name="_58_rememberMe" type="hidden" value="false"> <input class="field" id="_58_rememberMeCheckbox" name="_58_rememberMeCheckbox" onclick="Liferay.Util.updateCheckboxValue(this); " type="checkbox" value="false"> Remember Me </label> </div> </div></fieldset> <div class="button-holder "> <button class="btn btn-1 btn-primary" type="submit"> Sign In </button> </div> </fieldset> </form> </div> </main>
+	<main class="login c1" id="yui_patched_v3_11_0_1_1521845868113_174"> 
+		<div class="login-container" id="yui_patched_v3_11_0_1_1521845868113_173"> 
+			<div class="row">
+				<img src="resources/images/logo.svg" alt="" id="logo">
+			</div>
+			<div class="row">
+			</div>
+			<div class="row">
+				<form action="http://localhost:8080/web/elvis/sign-in?p_p_id=58&amp;p_p_lifecycle=1&amp;p_p_state=normal&amp;p_p_mode=view&amp;p_p_col_id=column-1&amp;p_p_col_count=2&amp;_58_struts_action=%2Flogin%2Flogin" class="form sign-in-form" id="_58_fm" method="post" name="_58_fm" autocomplete="on"> 
+					<fieldset class="input-container" id="yui_patched_v3_11_0_1_1521845868113_172"> 
+						<input name="_58_formDate" type="hidden" value="1521845866947"> 
+						<input class="field" id="_58_saveLastPath" name="_58_saveLastPath" type="hidden" value="false"> 
+						<input class="field" id="_58_redirect" name="_58_redirect" type="hidden" value=""> 
+						<input class="field" id="_58_doActionAfterLogin" name="_58_doActionAfterLogin" type="hidden" value="false"> 
+						<fieldset class="fieldset " id="yui_patched_v3_11_0_1_1521845868113_171"> 
+							<div class="" id="yui_patched_v3_11_0_1_1521845868113_170"> 
+								<div class="control-group input-text-wrapper success" id="yui_patched_v3_11_0_1_1521845868113_169"> 
+									<label class="control-label" for="_58_login"> Screen Name </label> <input class="field clearable success-field" id="_58_login" name="_58_login" type="text" value="" aria-required="true"> 
+								</div> 
+								<div class="control-group input-text-wrapper success" id="yui_patched_v3_11_0_1_1521845868113_188"> 
+									<label class="control-label" for="_58_password"> Password </label> <input class="field success-field" id="_58_password" name="_58_password" type="password" value="" aria-required="true"> 
+								</div> 
+								<span id="_58_passwordCapsLockSpan" style="display: none;">Caps Lock is on.</span> 
+								<div class="control-group form-inline input-checkbox-wrapper"> 
+									<label class="checkbox" for="_58_rememberMeCheckbox"> 
+										<input id="_58_rememberMe" name="_58_rememberMe" type="hidden" value="false"> 
+										<input class="field" id="_58_rememberMeCheckbox" name="_58_rememberMeCheckbox" onclick="Liferay.Util.updateCheckboxValue(this); " type="checkbox" value="false"> Remember Me 
+									</label> 
+								</div> 
+							</div>
+						</fieldset> 
+						<div class="button-holder "> 
+							<button class="btn btn-1 btn-primary" type="submit"> Sign In </button> 
+						</div> 
+					</fieldset> 
+				</form> 
+			</div>
+		</div> 
+	</main>
 
 	<!-- jquery -->
 	<script type="text/javascript" src=""></script>
-	<script src="resources/vendors/bootstrap/js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
