test key press example.

--- a/exe.html
+++ b/exe.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/app.css">
-    <script type="text/javascript" src="resources/js/pageScript.js"></script>
   </head>
   <body>
     <div class="todo_list">
@@ -19,5 +18,9 @@
         <li><i class="fa fa-trash"></i>Visit Hagrid</li>
       </ul>
     </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="resources/js/jQueryRotate.js"></script>
+  <script type="text/javascript" src="resources/js/pageScript.js"></script>
+
   </body>
 </html>
