Add link from homepage

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 		<li><a href="assignment3.html" title="Assignment 3">Tables&Forms</a></li>
 		<li><a href="assignment4.html" title="Assignment 4">CSS</a></li>
 	</ol>
+	<h1>Teaching</h1>
+	<ol>
+		<li><a href="/CS215-Web">CS215 - Web Programming and Database Development</a></li>
+	</ol>
 </body>
 </html>
